# advent_of_code

2024/: .gitignore  y2024.cabal
2024/app/: Main.hs
2024/day1/: Part1.hs  Part2.hs
2024/day2/: day2.hs
2024/src/Day1/: Part1.hs  Part2.hs
2024/src/Day2/: main.hs
2024/src/Day3/: main.hs
2024/src/Day4/: main.hs
2024/src/Day5/: main.hs
2024/src/Day6/: main.hs
