cabal-version:      3.0
name:               y2024
version:            0.1.0.0
-- synopsis:
-- description:
author:             lkts
maintainer:         -
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
  build-depends:    base ^>=4.17.2.1,megaparsec
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Day2.Main
    Day3.Main

executable y2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, y2024
    hs-source-dirs:   app
    default-language: Haskell2010